[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/start_symbol.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tableau de bord.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/UbuntuMono_Nerd_Font_Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[node name="Tableau de bord" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 48.0
texture_normal = ExtResource( 1 )

[node name="Speed" type="MarginContainer" parent="."]
margin_left = 52.0
margin_right = 300.0
margin_bottom = 48.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="SpeedContainer" type="VBoxContainer" parent="Speed"]
margin_left = 10.0
margin_right = 238.0
margin_bottom = 48.0

[node name="SpeedSlider" type="HSlider" parent="Speed/SpeedContainer"]
margin_right = 228.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
value = 5.0
rounded = true
scrollable = false

[node name="SpeedLabel" type="Label" parent="Speed/SpeedContainer"]
margin_top = 20.0
margin_right = 228.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "      Vitesse      "

[node name="Date" type="LineEdit" parent="."]
margin_left = 304.0
margin_right = 458.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "2021-09-22"
max_length = 10
expand_to_text_length = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="value_changed" from="Speed/SpeedContainer/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="text_entered" from="Date" to="." method="_on_Date_text_entered"]
